--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ let lastCount = null;
 let material = "";
 let runStartTime = null;
 let lastRun = {}; // per line
+let PASSWORD = ""; // stored once per session
 const SERVER_URL = "https://cases.hytalesanarchy.com";
 
 const lineSelect = document.getElementById("lineSelect");
@@ -73,187 +74,151 @@ const startCountInput = document.getElementById("startCount");
 const timeInput = document.getElementById("time");
 const countInput = document.getElementById("count");
 
-function updateClock() {
-  const now = new Date();
-  document.getElementById("liveTime").innerHTML =
-    `<small>${now.toDateString()} (${now.toLocaleTimeString([], {hour:'numeric', minute:'2-digit'})})</small>`;
-}
-setInterval(updateClock, 60000); updateClock();
-
-async function loadLog() {
-  try {
-    const res = await fetch(`${SERVER_URL}/log.json?${Date.now()}`);
-    const data = await res.json();
-    populateLines(data);
-    displayLog(data);
-    updateLastRunInfo(data);
-  } catch {
-    document.getElementById("log").innerHTML = "<small>Server not reachable.</small>";
-  }
-}
-
-function populateLines(data) {
-  lines = [...new Set(data.map(e => e.line))].filter(Boolean);
-  const old = lineSelect.value;
-  lineSelect.innerHTML = '<option value="">-- Select Line --</option>';
-  lines.forEach(l => {
-    const o = document.createElement("option");
-    o.value = l; o.text = l; lineSelect.appendChild(o);
-  });
-  if (lines.includes(old)) { lineSelect.value = old; currentLine = old; }
-}
-
-function lineChanged() {
-  currentLine = lineSelect.value;
-  lastCount = null; material = ""; runStartTime = null;
-  document.getElementById("summary").innerHTML = "<small>Waiting for run...</small>";
-  displayLog([]);
-  updateLastRunInfo();
-}
-
-function addLine() {
-  const name = document.getElementById("newLine").value.trim();
-  if (!name) return alert("Enter a line name");
-  currentLine = name;
-  document.getElementById("newLine").value = "";
-  promptAndSend({
-    date: new Date().toDateString(),
-    time: "Init",
-    material: "-",
-    count: 0,
-    diff: 0,
-    line: currentLine
-  });
-}
-
-function deleteLine() {
-  if (!currentLine) return alert("Select a line first");
-  if (!confirm(`Delete line "${currentLine}"?`)) return;
-  promptAndSend({}, true, currentLine, "delete");
-  currentLine = "";
-  document.getElementById("log").innerHTML = "";
-  document.getElementById("lastRun").innerHTML = "<small>No previous run</small>";
-}
-
-function startRun() {
-  if (!currentLine) return alert("Select a line first");
-  material = materialInput.value;
-  lastCount = parseInt(startCountInput.value);
-  if (!material || isNaN(lastCount)) return alert("Invalid setup");
-  runStartTime = new Date();
-  if (!lastRun[currentLine]) lastRun[currentLine] = {};
-  lastRun[currentLine].material = material;
-  lastRun[currentLine].count = lastCount;
-  lastRun[currentLine].start = runStartTime;
-  promptAndSend({
-    date: new Date().toDateString(),
-    time: "Start",
-    material,
-    count: lastCount,
-    diff: 0,
-    line: currentLine
-  });
-  document.getElementById("summary").innerHTML =
-    `<b>Material:</b> ${material}<br><b>Last Count:</b> ${lastCount}`;
-}
-
-async function endRun() {
-  if (!runStartTime) return alert("No active run");
-  const password = prompt("Enter password:");
-  if (password !== "tyvek") return alert("Wrong password");
-  const res = await fetch(`${SERVER_URL}/add`, {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({ entry: {}, reset: false, line: currentLine, action: "endrun", password })
-  });
-  const data = await res.json();
-  if (data.last_run) {
-    lastRun[currentLine] = {
-      material: data.last_run.material,
-      count: data.last_run.count,
-      start: new Date(data.last_run.start),
-      end: new Date(data.last_run.end)
-    };
-    const lr = lastRun[currentLine];
-    document.getElementById("lastRun").innerHTML = `
-      <b>Material:</b> ${lr.material}<br>
-      <b>Last Count:</b> ${lr.count}<br>
-      <b>Start:</b> ${lr.start.toLocaleString()}<br>
-      <b>End:</b> ${lr.end.toLocaleString()}
-    `;
-  }
-  material = ""; lastCount = null; runStartTime = null;
-  document.getElementById("summary").innerHTML = "<small>Waiting for run...</small>";
-  loadLog();
-}
-
-function addEntry() {
-  if (!currentLine || lastCount === null) return alert("Start a run first");
-  const time = timeInput.value; const count = parseInt(countInput.value);
-  if (!time || isNaN(count)) return;
-  const diff = count - lastCount; lastCount = count;
-  if (!lastRun[currentLine]) lastRun[currentLine] = {};
-  lastRun[currentLine].count = lastCount;
-  promptAndSend({
-    date: new Date().toDateString(),
-    time, material, count, diff, line: currentLine
-  });
-  timeInput.value = ""; countInput.value = "";
-  document.getElementById("summary").innerHTML =
-    `<b>Material:</b> ${material}<br><b>Last Count:</b> ${lastCount}`;
-}
-
-function displayLog(data = []) {
-  const logDiv = document.getElementById("log"); logDiv.innerHTML = "";
-  if (!currentLine) return;
-  data.filter(e => e.line === currentLine && !e.last_run).forEach(e => {
-    const d = document.createElement("div");
-    d.className = "log-entry";
-    d.innerHTML = `${e.time} | ${e.material} | ${e.count} <b>(+${e.diff || 0})</b>`;
-    logDiv.appendChild(d);
-  });
-}
-
-function updateLastRunInfo(data = []) {
-  if (!currentLine) {
-    document.getElementById("lastRun").innerHTML = "<small>No previous run</small>";
-    return;
-  }
-  const lastRunEntry = data.find(e => e.line === currentLine && e.last_run);
-  if (lastRunEntry) {
-    const lr = lastRunEntry.last_run;
-    lastRun[currentLine] = {
-      material: lr.material,
-      count: lr.count,
-      start: new Date(lr.start),
-      end: new Date(lr.end)
-    };
-  }
-  if (lastRun[currentLine]) {
-    const lr = lastRun[currentLine];
-    document.getElementById("lastRun").innerHTML = `
-      <b>Material:</b> ${lr.material}<br>
-      <b>Last Count:</b> ${lr.count}<br>
-      <b>Start:</b> ${lr.start.toLocaleString()}<br>
-      <b>End:</b> ${lr.end.toLocaleString()}
-    `;
-  } else {
-    document.getElementById("lastRun").innerHTML = "<small>No previous run</small>";
-  }
+// Ask for password once per session
+function getPassword() {
+    if (!PASSWORD) {
+        PASSWORD = prompt("Enter password:");
+    }
+    return PASSWORD;
 }
 
 async function promptAndSend(entry, reset = false, line = "", action = "add") {
-  const password = prompt("Enter password:");
-  if (password !== "tyvek") return alert("Wrong password");
-  await fetch(`${SERVER_URL}/add`, {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({ entry, reset, line: line || currentLine, action, password })
-  });
-  loadLog();
+    if (!getPassword()) return alert("Password required");
+    try {
+        await fetch(`${SERVER_URL}/add`, {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ entry, reset, line: line || currentLine, action, password: PASSWORD })
+        });
+        loadLog();
+    } catch {
+        alert("Server unreachable");
+    }
 }
 
-loadLog(); setInterval(loadLog, 10000);
+function startRun() {
+    if (!currentLine) return alert("Select a line first");
+    material = materialInput.value;
+    lastCount = parseInt(startCountInput.value);
+    if (!material || isNaN(lastCount)) return alert("Invalid setup");
+
+    runStartTime = new Date();
+
+    // Prevent duplicate Start
+    const activeStartExists = document.querySelector("#log .log-entry b")?.innerText.includes("(+0)");
+    if (activeStartExists) return alert("Run already started for this line");
+
+    lastRun[currentLine] = { material, count: lastCount, start: runStartTime };
+    promptAndSend({
+        date: new Date().toDateString(),
+        time: "Start",
+        material,
+        count: lastCount,
+        diff: 0,
+        line: currentLine
+    });
+
+    document.getElementById("summary").innerHTML =
+        `<b>Material:</b> ${material}<br><b>Last Count:</b> ${lastCount}`;
+}
+
+async function endRun() {
+    if (!runStartTime) return alert("No active run");
+    const res = await fetch(`${SERVER_URL}/add`, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ entry: {}, reset: false, line: currentLine, action: "endrun", password: getPassword() })
+    });
+    const data = await res.json();
+    if (data.last_run) {
+        lastRun[currentLine] = {
+            material: data.last_run.material,
+            count: data.last_run.count,
+            start: new Date(data.last_run.start),
+            end: new Date(data.last_run.end)
+        };
+    }
+    material = ""; lastCount = null; runStartTime = null;
+    document.getElementById("summary").innerHTML = "<small>Waiting for run...</small>";
+    loadLog();
+}
+
+// On load, detect active run
+async function loadLog() {
+    try {
+        const res = await fetch(`${SERVER_URL}/log.json?${Date.now()}`);
+        const data = await res.json();
+        populateLines(data);
+        displayLog(data);
+        updateLastRunInfo(data);
+
+        // Detect active run: Start without corresponding end
+        const activeStart = data.find(e => e.line === currentLine && e.time === "Start");
+        if (activeStart) {
+            runStartTime = new Date();
+            lastCount = activeStart.count;
+            material = activeStart.material;
+            document.getElementById("summary").innerHTML =
+                `<b>Material:</b> ${material}<br><b>Last Count:</b> ${lastCount}`;
+        }
+
+    } catch {
+        document.getElementById("log").innerHTML = "<small>Server not reachable.</small>";
+    }
+}
+
+function addEntry() {
+    if (!currentLine || lastCount === null) return alert("Start a run first");
+    const time = timeInput.value; const count = parseInt(countInput.value);
+    if (!time || isNaN(count)) return;
+    const diff = count - lastCount; lastCount = count;
+    lastRun[currentLine].count = lastCount;
+    promptAndSend({
+        date: new Date().toDateString(),
+        time, material, count, diff, line: currentLine
+    });
+    timeInput.value = ""; countInput.value = "";
+    document.getElementById("summary").innerHTML =
+        `<b>Material:</b> ${material}<br><b>Last Count:</b> ${lastCount}`;
+}
+
+function displayLog(data = []) {
+    const logDiv = document.getElementById("log"); logDiv.innerHTML = "";
+    if (!currentLine) return;
+    data.filter(e => e.line === currentLine && !e.last_run).forEach(e => {
+        const d = document.createElement("div");
+        d.className = "log-entry";
+        d.innerHTML = `${e.time} | ${e.material} | ${e.count} <b>(+${e.diff || 0})</b>`;
+        logDiv.appendChild(d);
+    });
+}
+
+function updateLastRunInfo(data = []) {
+    if (!currentLine) return document.getElementById("lastRun").innerHTML = "<small>No previous run</small>";
+    const lastRunEntry = data.find(e => e.line === currentLine && e.last_run);
+    if (lastRunEntry) {
+        const lr = lastRunEntry.last_run;
+        lastRun[currentLine] = {
+            material: lr.material,
+            count: lr.count,
+            start: new Date(lr.start),
+            end: new Date(lr.end)
+        };
+    }
+    if (lastRun[currentLine]) {
+        const lr = lastRun[currentLine];
+        document.getElementById("lastRun").innerHTML =
+            `<b>Material:</b> ${lr.material}<br>
+             <b>Last Count:</b> ${lr.count}<br>
+             <b>Start:</b> ${lr.start.toLocaleString()}<br>
+             <b>End:</b> ${lr.end.toLocaleString()}`;
+    } else {
+        document.getElementById("lastRun").innerHTML = "<small>No previous run</small>";
+    }
+}
+
+setInterval(loadLog, 10000);
+loadLog();
 </script>
 </body>
 </html>
