--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ async function addLine() {
     count: 0,
     diff: 0,
     line: currentLine
-  }, false, currentLine, "add", false);
+  }, false, currentLine, "add", true);
 }
 
 async function deleteLine() {
